--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>reporting-plugin</artifactId>
             <version>7.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
